src/styles/Projects.module.css
.cards {
    gap: 12px;
}
.card {
    margin: 0;
    padding: 0;
    position: relative;
    border-radius: 6px;
    overflow: hidden;
}
.description {
    text-align: justify;
    white-space: break-spaces;
}
.image {
    aspect-ratio: 1/1;
}
.text {
    display: grid;
    grid-template-rows: 1fr 2fr;
    text-align: center;
    align-items: center;
    justify-content: center;
    transition: 0.5s ease-in-out;
    padding: 24px;

}
.text h3 {
    font-size: 24px;
    font-weight: 700;
    line-height: 1.8em;
}
.text p {
    color: grey;
    font-weight: 400;
    font-size: 16px;
    letter-spacing: 0.7px;
}
.carouselContainer {
    display: flex;
    justify-content: center;
    align-items: center;
}
.icons {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    margin: 4px auto;
    padding: 4px
}
.large {
    display: none;
}

@media (min-width: 768px) {
    .small {
        display: none;
    }
    .large {
        display: grid;
    }
    .cards {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }
    .text {
        padding: 4px;
    }
}
@media (min-width: 768px) {
    .text {
        padding: 12px;
    }
}
@media (min-width: 992px) {
    .cards {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

